750
This is not actually the first time I've used a bug tracker, honest.  Once again, actually showing the offending caret.
```scala
scala> object Foo { def foo: Int = for (x <- 1 to 10) { "hello" } }
<console>:4: error: type mismatch;
 found   : Unit
 required: Int
       object Foo { def foo: Int = for (x <- 1 to 10) { "hello" } }
                                        ^
```
